kubernetes-demo/manifests/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-deploy
  labels:
    app: echo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: echo
  template:
    metadata:
      labels:
        app: echo
      annotations:
        docs.example/owner: "nicole"
    spec:
      containers:
        - name: echo
          image: hashicorp/http-echo:1.0.0
          args:
            - "-listen=:5678"
            - "-text=$(APP_MESSAGE)"
          ports:
            - containerPort: 5678
          volumeMounts:
            - name: config-vol
              mountPath: /etc/app
              readOnly: true
          livenessProbe:
            httpGet:
              path: /
              port: 5678
            initialDelaySeconds: 3
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 5678
            initialDelaySeconds: 2
            periodSeconds: 5
      volumes:
        - name: config-vol
          configMap:
            name: app-config
---
apiVersion: v1
kind: Service
metadata:
  name: echo-svc
spec:
  selector:
    app: echo
  ports:
    - name: http
      port: 80
      targetPort: 5678
  type: ClusterIP
